--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "@emotion/styled": "^11.11.5",
     "@fontsource/roboto": "^5.0.13",
     "@mui/material": "^5.15.19",
+    "chart.js": "^4.4.3",
     "framer-motion": "^11.2.12",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
