--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "framer-motion": "^11.2.12",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "vite-plugin-svgr": "^4.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
